syntax = "proto3";

option go_package = "github.com/Lord-Y/rafty/grpcrequests";

package grpcrequests;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message PreVoteRequest {
  string id = 1;
  string state = 2;
  uint64 currentTerm = 3;
}

message PreVoteResponse {
  string peerID = 1;
  string state = 2;
  uint64 currentTerm = 3;
}

message VoteRequest {
  string candidateId = 1;
  string candidateAddress = 2;
  string state = 3;
  uint64 currentTerm = 4;
  uint64 lastLogIndex = 5;
  uint64 lastLogTerm = 6;
}

message VoteResponse {
  bool voteGranted = 1;
  uint64 currentTerm = 2;
  string peerID = 3;
  bool newLeaderDetected = 4;
  bool requesterStepDown = 5;
}

message SetLeaderRequest {
  string id = 1;
  string address = 2;
  uint64 currentTerm = 3;
}

message SetLeaderResponse {
  string message = 1;
}

message GetLeaderRequest {
  string peerID = 1;
  string peerAddress = 2;
}

message GetLeaderResponse {
  string leaderID = 1;
  string leaderAddress = 2;
  string peerID = 3;
}

message LogEntry {
  uint64 term = 1;
  bytes command = 2;
}

message AppendEntryRequest {
  string leaderID = 1;
  string leaderAddress = 2;
  uint64 term = 3;
  uint64 prevLogIndex = 4;
  uint64 prevLogTerm = 5;
  repeated LogEntry entries = 6;
  uint64 leaderCommitIndex = 7;
  bool heartbeat = 8;
}

message AppendEntryResponse {
  uint64 term = 1;
  bool success = 2;
}

message SendHeartbeatRequest {
  string leaderID = 1;
  string leaderAddress = 3;
  uint64 currentTerm = 2;
}

message SendHeartbeatResponse {
  string peerID = 1;
  uint64 currentTerm = 2;
  bool multipleLeaders = 3;
}

message AskNodeIDRequest {
  string id = 1;
  string address = 2;
}

message AskNodeIDResponse {
  string peerID = 1;
}

message ClientGetLeaderRequest {
  string message = 1;
}

message ClientGetLeaderResponse {
  string leaderID = 1;
  string leaderAddress = 2;
}

message ForwardCommandToLeaderRequest {
  bytes command = 1;
}

message ForwardCommandToLeaderResponse {
  bytes data = 1;
  string error = 2;
}

service Rafty {
  rpc SendPreVoteRequest(PreVoteRequest) returns (PreVoteResponse) {}
  rpc SendVoteRequest(VoteRequest) returns (VoteResponse) {}
  rpc SetLeader(SetLeaderRequest) returns (SetLeaderResponse) {}
  rpc GetLeader(GetLeaderRequest) returns (GetLeaderResponse) {}
  rpc ClientGetLeader(ClientGetLeaderRequest) returns (ClientGetLeaderResponse) {}
  rpc SendAppendEntriesRequest(AppendEntryRequest) returns (AppendEntryResponse) {}
  rpc SendHeartbeats(SendHeartbeatRequest) returns (SendHeartbeatResponse) {}
  rpc AskNodeID(AskNodeIDRequest) returns (AskNodeIDResponse) {}
  rpc ForwardCommandToLeader(ForwardCommandToLeaderRequest) returns (ForwardCommandToLeaderResponse) {}
}
